--- a/index.html
+++ b/index.html
@@ -9,42 +9,51 @@
       href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&family=Castoro&family=Rubik:wght@500;600;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="style.css" />
     <title>RWD Week3</title>
   </head>
 
-  <link rel="stylesheet" href="style.css" />
-  com/css2?family=Bruno+Ace+SC&family=Castoro&family=Rubik:wght@500;600;700&display=swap"
-  rel="stylesheet">
-
   <body>
     <nav class="navigation">
-      <img
-        src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/logo-white.png?raw=true"
-        alt="logo-white"
-        class="navigation__logo"
-      />
-      <div class="navigation__linkbox">
-        <a href="" class="navigation__link">系列鏡框</a>
-        <a href="" class="navigation__link">門市據點</a>
-        <a href="" class="navigation__link">部落格</a>
-        <a href="" class="navigation__link">常見問題</a>
+      <div class="container navigation__container">
+        <img
+          class="navigation__logo"
+          src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/logo-white.png?raw=true"
+          alt="logo-white"
+        />
+        <ul class="navigation__list">
+          <li class="navigation__item">
+            <a href="#" class="navigation__link">系列鏡框</a>
+          </li>
+          <li class="navigation__item">
+            <a href="#" class="navigation__link">門市據點</a>
+          </li>
+          <li class="navigation__item">
+            <a href="#" class="navigation__link">部落格</a>
+          </li>
+          <li class="navigation__item">
+            <a href="#" class="navigation__link">常見問題</a>
+          </li>
+        </ul>
       </div>
     </nav>
+
     <header class="header">
-      <div class="header__titlebox">
+      <div class="container header__titlebox">
         <h1 class="header__title">Promise-Desert 2020 早春系列</h1>
         <h2 class="header__subtitle">看得清，才能看得遠</h2>
         <button class="header__button">立即購買</button>
       </div>
     </header>
+
     <main>
       <div class="features">
-        <div class="container features__container">
+        <div class="container p-36">
           <h3 class="features__title title--h3">用專業的心，做專業的事</h3>
           <ul class="features__list">
             <li class="features__item">
               <img
-                class="features__icon"
+                class="mb-24"
                 src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section2-1.png?raw=true"
                 alt="home-section2-1"
               />
@@ -56,7 +65,7 @@
             </li>
             <li class="features__item">
               <img
-                class="features__icon"
+                class="mb-24"
                 src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section2-2.png?raw=true"
                 alt="home-section2-2"
               />
@@ -69,7 +78,7 @@
             </li>
             <li class="features__item">
               <img
-                class="features__icon"
+                class="mb-24"
                 src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section2-3.png?raw=true"
                 alt="home-section2-3"
               />
@@ -81,7 +90,7 @@
             </li>
             <li class="features__item">
               <img
-                class="features__icon"
+                class="mb-24"
                 src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-sectioin2-4.png?raw=true"
                 alt="home-sectioin2-4"
               />
@@ -95,13 +104,13 @@
         </div>
       </div>
 
-      <div class="calssic">
+      <div class="classic">
         <div class="container">
-          <h3 class="classic__title title--h3">經典系列鏡框</h3>
+          <h3 class="title--h3 mb-48">經典系列鏡框</h3>
           <ul class="classic__list">
             <li class="classic__item">
               <img
-                class="classic__img"
+                class="mb-8"
                 src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section3-1.png?raw=true"
                 alt="home-section3-1"
               />
@@ -109,7 +118,7 @@
             </li>
             <li class="classic__item">
               <img
-                class="classic__img"
+                class="mb-8"
                 src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section3-2.png?raw=true"
                 alt="home-section3-2"
               />
@@ -117,7 +126,7 @@
             </li>
             <li class="classic__item">
               <img
-                class="classic__img"
+                class="mb-8"
                 src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section3-3.png?raw=true"
                 alt="home-section3-3"
               />
@@ -151,13 +160,13 @@
           </ui>
         </div>
       </div>
+
       <div class="recommend">
         <div class="conatiner">
           <h3 class="title--h3">顧客推薦</h3>
           <ul class="recommend__list">
             <li class="recommend__item">
               <img
-                class="recommend__img"
                 src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-1.png?raw=true"
                 alt="home-section5-1"
               />
@@ -172,7 +181,6 @@
 
             <li class="recommend__item">
               <img
-                class="recommend__img"
                 src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-2.png?raw=true"
                 alt="home-section5-2"
               />
@@ -187,7 +195,6 @@
 
             <li class="recommend__item">
               <img
-                class="recommend__img"
                 src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-3.png?raw=true"
                 alt="home-section5-3"
               />
@@ -202,7 +209,6 @@
 
             <li class="recommend__item">
               <img
-                class="recommend__img"
                 src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-4.png?raw=true"
                 alt="home-section5-4"
               />
